--- a/leadership.html
+++ b/leadership.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Leadership - Alpha Iota Short Courses</title>
+  <title>Leadership & Change Management: Leadership - Alpha Iota Short Courses</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <style>
@@ -23,19 +23,8 @@
       padding: 2rem;
       text-align: center;
     }
-    header h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-    }
     .section {
       padding: 2rem 1rem;
-    }
-    .instructions {
-      background: #fff3cd;
-      border-left: 6px solid #ffc107;
-      padding: 1rem;
-      margin-bottom: 2rem;
-      border-radius: 8px;
     }
     .week {
       background-color: white;
@@ -44,14 +33,9 @@
       margin-bottom: 1.5rem;
       border-radius: 8px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-      transition: transform 0.3s ease;
-    }
-    .week:hover {
-      transform: scale(1.02);
     }
     .week h4 {
       color: var(--primary);
-      margin-bottom: 0.5rem;
     }
     .footer {
       background-color: var(--primary);
@@ -65,61 +49,90 @@
 <body>
 
   <header>
-    <h1><i class="fas fa-user-tie"></i> Leadership</h1>
-    <p>Leadership & Change Management — Soft Skills Short Course</p>
+    <h1><i class="fas fa-user-tie"></i> Leadership & Change Management: Leadership</h1>
+    <p>PROJECT CORE - Soft Skills Short Course</p>
   </header>
 
   <main class="container section">
-    <div class="instructions">
-      <p><i class="fas fa-info-circle"></i><strong> Please read before starting:</strong></p>
+    <div class="instructions" style="background: #fff3cd; border-left: 6px solid #ffc107; padding: 1rem; margin-bottom: 2rem; border-radius: 8px;">
+      <p><i class="fas fa-info-circle"></i> <strong>Please read before starting:</strong></p>
       <ul>
         <li>Complete each week in order — finish video, activity, and quiz.</li>
-        <li>Use the <strong>same email address</strong> across all submissions.</li>
-        <li>Click links below to view materials. Submit final outputs as instructed.</li>
+        <li>Use the <strong>same email address</strong> across all Google Form submissions.</li>
+        <li>Fill out all required fields accurately for progress tracking.</li>
+        <li>Click links below to open videos, PDFs, or quizzes in a pop-up window.</li>
+        <li>Ensure to submit your week 6 acknowledgement form</li>
       </ul>
     </div>
 
-    <p class="mb-4"><strong>Status:</strong> In progress<br><strong>Course Format:</strong> 6 Weeks | Video + Activities + Quiz</p>
-
     <div class="week">
-      <h4><i class="fas fa-calendar-week"></i> Week 1: Coaching in Complex Environments</h4>
-      <p><strong>🎥 Video:</strong> How to Coach Employees to Improve Performance</p>
-      <p><strong>🧠 Quiz:</strong> Reflection Question</p>
+      <h4>Week 1: Coaching in Complex Environments</h4>
+      <p><strong>Objective:</strong> Learn essential coaching techniques for guiding colleagues through complex HSEC, risk, and productivity challenges.</p>
+      <p><strong>🎥 Video:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/a-7vWMvUZaM')">How to Coach Employees to Improve Performance</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSeEGP2dbFBxroIWceFCajSSHu6HPCkFUklfy5nww8MSJP1Jxg/viewform?embedded=true')">Reflection Question</a></p>
     </div>
 
     <div class="week">
-      <h4><i class="fas fa-calendar-week"></i> Week 2: Creating a Coaching Culture by Example</h4>
-      <p><strong>🎥 Video:</strong> Create A Coaching Culture - Matthew Kelly - The Culture Solution</p>
-      <p><strong>🧠 Quiz:</strong> Reflection Question</p>
+      <h4>Week 2: Creating a Coaching Culture by Example</h4>
+      <p><strong>Objective:</strong> Understand how visible role modeling fosters a regional culture of coaching.</p>
+      <p><strong>🎥 Video:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/bCKKVk7u0Sg')">Create A Coaching Culture - Matthew Kelly</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSc26bp3SBWjYjajN7xtGTrQ6tsDzu1GrlZkNgpj5Pfj7ArtGA/viewform?embedded=true')">Reflection Question</a></p>
     </div>
 
     <div class="week">
-      <h4><i class="fas fa-calendar-week"></i> Week 3: Embracing Coachability – Learning Through Coaching</h4>
-      <p><strong>📖 Reading:</strong> “What Is ‘Coachable?’ How To Build This Quality in 8 Steps”</p>
-      <p><strong>🧠 Quiz:</strong> Week 3 Quiz</p>
+      <h4>Week 3: Embracing Coachability – Learning Through Coaching</h4>
+      <p><strong>Objective:</strong> Learn how to actively seek and apply coaching to improve performance in HSEC, Risk, People, and Productivity—even without formal authority.</p>
+      <p><strong>📖 Reading:</strong> <a href="https://www.indeed.com/career-advice/career-development/how-to-become-coachable" target="_blank">What Is ‘Coachable?’ How To Build This Quality in 8 Steps</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSdVlSbZi3iexwnhnLmgYNBXuv3zFj_HFiyU6W3XbF3BtF8j6g/viewform?embedded=true')">Week 3 Quiz</a></p>
     </div>
 
     <div class="week">
-      <h4><i class="fas fa-calendar-week"></i> Week 4: Identify Your Leadership Style</h4>
-      <p><strong>📝 Activity:</strong> Leadership Style Assessment (Google Forms)</p>
+      <h4>Week 4: Identify Your Leadership Style</h4>
+      <p><strong>Objective:</strong> This self-assessment tool will help you to identify the leadership style you naturally lean toward, and introduce you to alternative approaches.</p>
+      <p><strong>📝 Assessment:</strong> <a href="https://www.mindtools.com/azr30oh/whats-your-leadership-style" target="_blank">MindTools Leadership Style Assessment</a></p>
+      <p><strong>📝 Submit:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSdSTWepfFvxtDZtdJWoP49nH_cShEoPGfIeQUpOj9BNfO4jug/viewform?embedded=true')">Submit Assessment Reflection</a></p>
     </div>
 
     <div class="week">
-      <h4><i class="fas fa-calendar-week"></i> Week 5: Integrating Leadership & Coaching in the Workplace</h4>
-      <p><strong>🎥 Video:</strong> Coaching Style Of Leadership (Explained in 3 Minutes)</p>
-      <p><strong>🧠 Quiz:</strong> Chapter Quiz</p>
+      <h4>Week 5: Integrating Leadership & Coaching in the Workplace</h4>
+      <p><strong>Objective:</strong> Understand how to integrate leadership styles and coaching approaches to drive performance and engagement in day-to-day operations.</p>
+      <p><strong>🎥 Video:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/xWyZb4idaq0')">Coaching Style Of Leadership (Explained in 3 Minutes)</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSdkfVo0DM3gDATp4gW6m7UzomajfSNpnHDmUx_N41YUBlg8Tw/viewform?embedded=true')">Chapter Quiz</a></p>
     </div>
 
     <div class="week">
-      <h4><i class="fas fa-calendar-week"></i> Week 6: Reflection & Leadership Visioning</h4>
-      <p><strong>🎥 Video:</strong> Difference between a Manager and a Leader - Simon Sinek</p>
-      <p><strong>📝 Activity:</strong> Essay — What have been the most transformative leadership insights you've gained and how will you apply them?</p>
+      <h4>Week 6: Reflection & Leadership Visioning</h4>
+      <p><strong>Objective:</strong> Reflect on your leadership development journey and distinguish between managing tasks and leading people, using insights to craft a personal leadership vision grounded in coaching principles.</p>
+      <p><strong>🎥 Video:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/8RkbZms74E8')">Difference between a Manager and a Leader - Simon Sinek</a></p>
+      <p><strong>📝 Essay:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSdDasfvDPSpco4kULXvU27s-S-DC-dNVP5nDxfgmLnbWq4-tg/viewform?embedded=true')">Submit Reflection</a></p>
     </div>
   </main>
+
+  <div class="modal fade" id="resourceModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Course Resource</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <iframe id="resourceFrame" src="" style="width:100%; height:500px; border:none;"></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <footer class="footer">
     <p>&copy; 2025 Alpha Iota | Internal Course Page | Project C.O.R.E.</p>
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    function openResource(url) {
+      document.getElementById('resourceFrame').src = url;
+      const modal = new bootstrap.Modal(document.getElementById('resourceModal'));
+      modal.show();
+    }
+  </script>
 </body>
 </html>
