--- a/strategic-planning.html
+++ b/strategic-planning.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Strategic Planning - Alpha Iota Short Courses</title>
+  <title>Vision & Strategy: Strategic Planning - Alpha Iota Short Courses</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <style>
@@ -23,19 +23,8 @@
       padding: 2rem;
       text-align: center;
     }
-    header h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-    }
     .section {
       padding: 2rem 1rem;
-    }
-    .instructions {
-      background: #fff3cd;
-      border-left: 6px solid #ffc107;
-      padding: 1rem;
-      margin-bottom: 2rem;
-      border-radius: 8px;
     }
     .week {
       background-color: white;
@@ -44,14 +33,9 @@
       margin-bottom: 1.5rem;
       border-radius: 8px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-      transition: transform 0.3s ease;
-    }
-    .week:hover {
-      transform: scale(1.02);
     }
     .week h4 {
       color: var(--primary);
-      margin-bottom: 0.5rem;
     }
     .footer {
       background-color: var(--primary);
@@ -65,63 +49,97 @@
 <body>
 
   <header>
-    <h1><i class="fas fa-binoculars"></i> Strategic Planning</h1>
-    <p>Vision & Strategy — Soft Skills Short Course</p>
+    <h1><i class="fas fa-bullseye"></i> Vision & Strategy: Strategic Planning</h1>
+    <p>PROJECT CORE - Soft Skills Short Course</p>
   </header>
 
   <main class="container section">
-    <div class="instructions">
-      <p><i class="fas fa-info-circle"></i><strong> Please read before starting:</strong></p>
+    <div class="instructions" style="background: #fff3cd; border-left: 6px solid #ffc107; padding: 1rem; margin-bottom: 2rem; border-radius: 8px;">
+      <p><i class="fas fa-info-circle"></i> <strong>Please read before starting:</strong></p>
       <ul>
         <li>Complete each week in order — finish video, activity, and quiz.</li>
-        <li>Use the <strong>same email address</strong> across all submissions.</li>
-        <li>Click links below to view materials. Submit final outputs as instructed.</li>
+        <li>Use the <strong>same email address</strong> across all Google Form submissions.</li>
+        <li>Fill out all required fields accurately for progress tracking.</li>
+        <li>Click links below to open videos, PDFs, or quizzes in a pop-up window.</li>
+        <li>Ensure to submit your week 6 acknowledgement form</li>
       </ul>
     </div>
 
-    <p class="mb-4"><strong>Status:</strong> In progress<br><strong>Course Format:</strong> 6 Weeks | Video + Activities + Quiz</p>
-
     <div class="week">
-      <h4><i class="fas fa-calendar-week"></i> Week 1: Foundations of Competitive Advantage</h4>
-      <p><strong>🎥 Video:</strong> Understanding Competitive Advantage & Parity in Strategic Management - Prof. Dr. Kai Reinhardt</p>
-      <p><strong>🧠 Quiz:</strong> Reflection Question</p>
+      <h4>Week 1: Foundations of Competitive Advantage</h4>
+      <p><strong>Objective:</strong> Understand what competitive advantage is and how to leverage it for strategic advantage.</p>
+      <p><strong>🎥 Video:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/ZP8SR70mAdA')">Understanding Competitive Advantage & Parity</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSfgG1xFzlOhChHrFkojWAkgukfuFgXBhh68H4H6h-ZYs4b3xg/viewform?embedded=true')">Reflection Question</a></p>
     </div>
 
     <div class="week">
-      <h4><i class="fas fa-calendar-week"></i> Week 2: Strategic Frameworks</h4>
-      <p><strong>🎥 Video:</strong> OKR Training</p>
-      <p><strong>🧠 Quiz:</strong> Reflection Question</p>
-      <p><strong>Other Handovers:</strong> Basic OKR Template, OKR Template</p>
+      <h4>Week 2: Strategic Frameworks</h4>
+      <p><strong>Objective:</strong> Learn structured planning tools to set objectives, track performance, and align resources.</p>
+      <p><strong>🎥 Video:</strong> <a href="#" onclick="openResource('https://drive.google.com/file/d/1aoImVxHMkJtdgiPnTfsiwnkLkdsC98Ii/preview')">OKR Training</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSf0vxcP92pXDi0odQPnAgXzeZrvGOYDdwdMNSUUQizzmUhsMg/viewform?embedded=true')">Reflection Question</a></p>
+      <p><strong>📄 Templates:</strong> 
+        <a href="https://docs.google.com/spreadsheets/d/1DgadL46FqAJ8bN9gWDTD6l_sOKk9b9kHoU9cVEYquII/edit?gid=166325737#gid=166325737" target="_blank">Basic OKR Template</a>,
+        <a href="https://docs.google.com/spreadsheets/d/1pa4N8gBFQu3yYcKT4dh2Pa7W9I-NEim-GxFdW5_2jgg/edit?gid=526862787#gid=526862787" target="_blank">OKR Template</a>
+      </p>
     </div>
 
     <div class="week">
-      <h4><i class="fas fa-calendar-week"></i> Week 3: Strategic Thinking & Mental Models</h4>
-      <p><strong>📖 Reading:</strong> Book Summary: The Great Mental Models by Shane Parrish and Rhiannon Beaubien</p>
-      <p><strong>🧠 Quiz:</strong> Week 3 Quiz</p>
+      <h4>Week 3: Strategic Thinking & Mental Models</h4>
+      <p><strong>Objective:</strong> Develop systems thinking and use mental models to make better long-term strategic decisions under uncertainty.</p>
+      <p><strong>📖 Reading:</strong> <a href="https://www.tobysinclair.com/post/book-summary-the-great-mental-models-by-shane-parrish" target="_blank">The Great Mental Models - Summary</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSeZ41LzFWAE6gYWKCvnXnxjfMgfwYJGU02l48Pbo4qAP_75NQ/viewform?embedded=true')">Week 3 Quiz</a></p>
     </div>
 
     <div class="week">
-      <h4><i class="fas fa-calendar-week"></i> Week 4: Strategic Frameworks & Mental Models</h4>
-      <p><strong>📝 Activity:</strong> Design 3 OKRs for your team and apply 2 mental models to potential challenges (Google Forms)</p>
-      <p><strong>Other Handovers:</strong> Basic OKR Template, OKR Template</p>
+      <h4>Week 4: Strategic Frameworks & Mental Models</h4>
+      <p><strong>Objective:</strong> Learn how to design OKRs and apply mental models in real-world settings.</p>
+      <p><strong>📝 Main Activity:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSfNTDB1p8TvGzitC6VKcwE4guiB8HRwUk8NUab0uAjMrN0UFQ/viewform?embedded=true')">Submit OKRs and Mental Models</a></p>
+      <p><strong>📄 Templates:</strong> 
+        <a href="https://docs.google.com/spreadsheets/d/1DgadL46FqAJ8bN9gWDTD6l_sOKk9b9kHoU9cVEYquII/edit?gid=166325737#gid=166325737" target="_blank">Basic OKR Template</a>,
+        <a href="https://docs.google.com/spreadsheets/d/1pa4N8gBFQu3yYcKT4dh2Pa7W9I-NEim-GxFdW5_2jgg/edit?gid=526862787#gid=526862787" target="_blank">OKR Template</a>
+      </p>
     </div>
 
     <div class="week">
-      <h4><i class="fas fa-calendar-week"></i> Week 5: Aligning Strategy Across the Organization</h4>
-      <p><strong>🎥 Video:</strong> Strategic Alignment in 5 Slides // Strategic Planning Process</p>
-      <p><strong>🧠 Quiz:</strong> Chapter Quiz</p>
+      <h4>Week 5: Aligning Strategy Across the Organization</h4>
+      <p><strong>Objective:</strong> Learn how to align strategy across teams and functions.</p>
+      <p><strong>🎥 Video:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/uUzkoPi5wFU?start=78')">Strategic Alignment in 5 Slides</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSd4dTRNpZ-fMafZsiTb7Nv71e0cRGt1I-suutL9dLtmZZbByQ/viewform?embedded=true')">Chapter Quiz</a></p>
     </div>
 
     <div class="week">
-      <h4><i class="fas fa-calendar-week"></i> Week 6: Strategic Thinking</h4>
-      <p><strong>🎥 Video:</strong> The 6 Disciplines of Strategic Thinking For Leaders | Michael Watkins</p>
-      <p><strong>📝 Activity:</strong> Essay — Project your team's strategy for 3 years ahead (Google Forms)</p>
+      <h4>Week 6: Strategic Thinking</h4>
+      <p><strong>Objective:</strong> Synthesize learning and demonstrate strategic thinking through analysis and reflection.</p>
+      <p><strong>🎥 Video:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/jD524Xrpu1o?start=39')">6 Disciplines of Strategic Thinking</a></p>
+      <p><strong>📝 Essay:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSfDQSd1ZRa4tGP1dxMGnyYkyE4u8nfKChxAce6dAZbcMLo6wg/viewform?embedded=true')">Submit Project / Essay</a></p>
     </div>
   </main>
+
+  <div class="modal fade" id="resourceModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Course Resource</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <iframe id="resourceFrame" src="" style="width:100%; height:500px; border:none;"></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <footer class="footer">
     <p>&copy; 2025 Alpha Iota | Internal Course Page | Project C.O.R.E.</p>
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    function openResource(url) {
+      document.getElementById('resourceFrame').src = url;
+      const modal = new bootstrap.Modal(document.getElementById('resourceModal'));
+      modal.show();
+    }
+  </script>
 </body>
 </html>
