--- a/innovation.html
+++ b/innovation.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Innovation - Alpha Iota Short Courses</title>
+  <title>Problem Solving & Innovation: Innovation - Alpha Iota Short Courses</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <style>
@@ -23,19 +23,8 @@
       padding: 2rem;
       text-align: center;
     }
-    header h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-    }
     .section {
       padding: 2rem 1rem;
-    }
-    .instructions {
-      background: #fff3cd;
-      border-left: 6px solid #ffc107;
-      padding: 1rem;
-      margin-bottom: 2rem;
-      border-radius: 8px;
     }
     .week {
       background-color: white;
@@ -44,14 +33,9 @@
       margin-bottom: 1.5rem;
       border-radius: 8px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-      transition: transform 0.3s ease;
-    }
-    .week:hover {
-      transform: scale(1.02);
     }
     .week h4 {
       color: var(--primary);
-      margin-bottom: 0.5rem;
     }
     .footer {
       background-color: var(--primary);
@@ -65,61 +49,90 @@
 <body>
 
   <header>
-    <h1><i class="fas fa-lightbulb"></i> Innovation</h1>
-    <p>Problem Solving & Innovation — Soft Skills Short Course</p>
+    <h1><i class="fas fa-lightbulb"></i> Problem Solving & Innovation: Innovation</h1>
+    <p>PROJECT CORE - Soft Skills Short Course</p>
   </header>
 
   <main class="container section">
-    <div class="instructions">
-      <p><i class="fas fa-info-circle"></i><strong> Please read before starting:</strong></p>
+    <div class="instructions" style="background: #fff3cd; border-left: 6px solid #ffc107; padding: 1rem; margin-bottom: 2rem; border-radius: 8px;">
+      <p><i class="fas fa-info-circle"></i> <strong>Please read before starting:</strong></p>
       <ul>
         <li>Complete each week in order — finish video, activity, and quiz.</li>
-        <li>Use the <strong>same email address</strong> across all submissions.</li>
-        <li>Click links below to view materials. Submit final outputs as instructed.</li>
+        <li>Use the <strong>same email address</strong> across all Google Form submissions.</li>
+        <li>Fill out all required fields accurately for progress tracking.</li>
+        <li>Click links below to open videos, PDFs, or quizzes in a pop-up window.</li>
+        <li>Ensure to submit your week 6 acknowledgement form</li>
       </ul>
     </div>
 
-    <p class="mb-4"><strong>Status:</strong> In progress<br><strong>Course Format:</strong> 6 Weeks | Video + Activities + Quiz</p>
-
     <div class="week">
-      <h4><i class="fas fa-calendar-week"></i> Week 1: Understanding Innovation: Concepts & Mindsets</h4>
-      <p><strong>🎥 Video:</strong> What Is Innovation?</p>
-      <p><strong>🧠 Quiz:</strong> Reflection Question</p>
+      <h4>Week 1: Understanding Innovation: Concepts & Mindsets</h4>
+      <p><strong>Objective:</strong> Introduce learners to the core concepts of innovation, the difference between creativity and innovation, and the mindsets that foster innovation in the workplace.</p>
+      <p><strong>🎥 Video:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/_XcFVl6mjWI')">What Is Innovation?</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSeagnDW_HAZUDh6-hKdTxswqHLJ_7uaUzKEEXU-wbXFsND-6A/viewform?embedded=true')">Reflection Question</a></p>
     </div>
 
     <div class="week">
-      <h4><i class="fas fa-calendar-week"></i> Week 2: The Innovation Matrix</h4>
-      <p><strong>🎥 Video:</strong> Innovation Matrix</p>
-      <p><strong>🧠 Quiz:</strong> Reflection Question</p>
+      <h4>Week 2: The Innovation Matrix</h4>
+      <p><strong>Objective:</strong> Explore the stages of the innovation process, including ideation, validation, prototyping, and implementation.</p>
+      <p><strong>🎥 Video:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/q4K5KQ--F9I?start=40')">Innovation Matrix</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSftiK73RcHnLS0LbpjOX1eMQ2J5uB158ykGvhd5Uc9P-7Pyww/viewform?embedded=true')">Reflection Question</a></p>
     </div>
 
     <div class="week">
-      <h4><i class="fas fa-calendar-week"></i> Week 3: Barriers to Innovation & How to Overcome Them</h4>
-      <p><strong>📖 Reading:</strong> The ten barriers to innovation</p>
-      <p><strong>🧠 Quiz:</strong> Week 3 Quiz</p>
+      <h4>Week 3: Barriers to Innovation & How to Overcome Them</h4>
+      <p><strong>Objective:</strong> Identify common personal, team, and organizational barriers to innovation and examine tools to overcome them.</p>
+      <p><strong>📖 Reading:</strong> <a href="https://www.lucidity.org.uk/the-ten-barriers-to-innovation/" target="_blank">The Ten Barriers to Innovation</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSfCz4b5_WcSi8d2aA-h2BW0csRshv-56EE_fhvfFfFs5PWsmg/viewform?embedded=true')">Week 3 Quiz</a></p>
     </div>
 
     <div class="week">
-      <h4><i class="fas fa-calendar-week"></i> Week 4: Culture of Innovation Assessment</h4>
-      <p><strong>📝 Activity:</strong> Culture of Innovation Assessment (Google Forms)</p>
+      <h4>Week 4: Culture of Innovation Assessment</h4>
+      <p><strong>Objective:</strong> Understand how to build and maintain an innovation culture within teams and organizations.</p>
+      <p><strong>📝 Main Activity:</strong> <a href="https://www.innovationtraining.org/culture-of-innovation-assessment/" target="_blank">Culture of Innovation Assessment</a></p>
+      <p><strong>📝 Submit:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSeH85sawiugJkciw7U40FxQs87jBc0pA_pBSuoai_qLvnVCow/viewform?embedded=true')">Submit Assessment</a></p>
     </div>
 
     <div class="week">
-      <h4><i class="fas fa-calendar-week"></i> Week 5: Case Studies in Innovation</h4>
-      <p><strong>🎥 Video:</strong> The art of innovation | Guy Kawasaki</p>
-      <p><strong>🧠 Quiz:</strong> Chapter Quiz</p>
+      <h4>Week 5: Case Studies in Innovation</h4>
+      <p><strong>Objective:</strong> Analyze how successful companies and teams apply innovation practices to create impact.</p>
+      <p><strong>🎥 Video:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/Mtjatz9r-Vc')">The Art of Innovation | Guy Kawasaki</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSdrkHkcVOE5iSX9Cm--lnJ-p8WtsXix15073Qbh0dbH3NYkJg/viewform?embedded=true')">Chapter Quiz</a></p>
     </div>
 
     <div class="week">
-      <h4><i class="fas fa-calendar-week"></i> Week 6: Proposing Your Own Innovation Initiative</h4>
-      <p><strong>🎥 Video:</strong> How to Pitch Your Idea – Guy Kawasaki’s 10/20/30 Rule</p>
-      <p><strong>📝 Activity:</strong> Essay — Describe an area in your team/role where innovation is needed and propose an initiative (Google Forms)</p>
+      <h4>Week 6: Proposing Your Own Innovation Initiative</h4>
+      <p><strong>Objective:</strong> Apply the full innovation process by proposing a real-world innovation idea in your current team or function.</p>
+      <p><strong>🎥 Video:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/-M13SObffog')">How to Pitch Your Idea - Guy Kawasaki</a></p>
+      <p><strong>📝 Essay:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSfyZf4MtdkDf60F0bSbBdu-Wse03L0TdFPthmHF0xZSSaZ7lA/viewform?embedded=true')">Submit Innovation Proposal</a></p>
     </div>
   </main>
+
+  <div class="modal fade" id="resourceModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Course Resource</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <iframe id="resourceFrame" src="" style="width:100%; height:500px; border:none;"></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <footer class="footer">
     <p>&copy; 2025 Alpha Iota | Internal Course Page | Project C.O.R.E.</p>
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    function openResource(url) {
+      document.getElementById('resourceFrame').src = url;
+      const modal = new bootstrap.Modal(document.getElementById('resourceModal'));
+      modal.show();
+    }
+  </script>
 </body>
 </html>
