--- a/frame-opportunity.html
+++ b/frame-opportunity.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Frame Opportunity - Alpha Iota Short Courses</title>
+  <title>Problem Solving & Innovation: Frame Opportunity - Alpha Iota Short Courses</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <style>
@@ -23,19 +23,8 @@
       padding: 2rem;
       text-align: center;
     }
-    header h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-    }
     .section {
       padding: 2rem 1rem;
-    }
-    .instructions {
-      background: #fff3cd;
-      border-left: 6px solid #ffc107;
-      padding: 1rem;
-      margin-bottom: 2rem;
-      border-radius: 8px;
     }
     .week {
       background-color: white;
@@ -44,14 +33,9 @@
       margin-bottom: 1.5rem;
       border-radius: 8px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-      transition: transform 0.3s ease;
-    }
-    .week:hover {
-      transform: scale(1.02);
     }
     .week h4 {
       color: var(--primary);
-      margin-bottom: 0.5rem;
     }
     .footer {
       background-color: var(--primary);
@@ -65,63 +49,91 @@
 <body>
 
   <header>
-    <h1><i class="fas fa-lightbulb"></i> Frame Opportunity</h1>
-    <p>Problem Solving & Innovation — Soft Skills Short Course</p>
+    <h1><i class="fas fa-search"></i> Problem Solving & Innovation: Frame Opportunity</h1>
+    <p>PROJECT CORE - Soft Skills Short Course</p>
   </header>
 
   <main class="container section">
-    <div class="instructions">
-      <p><i class="fas fa-info-circle"></i><strong> Please read before starting:</strong></p>
+    <div class="instructions" style="background: #fff3cd; border-left: 6px solid #ffc107; padding: 1rem; margin-bottom: 2rem; border-radius: 8px;">
+      <p><i class="fas fa-info-circle"></i> <strong>Please read before starting:</strong></p>
       <ul>
         <li>Complete each week in order — finish video, activity, and quiz.</li>
-        <li>Use the <strong>same email address</strong> across all submissions.</li>
-        <li>Click links below to view materials. Submit final outputs as instructed.</li>
+        <li>Use the <strong>same email address</strong> across all Google Form submissions.</li>
+        <li>Fill out all required fields accurately for progress tracking.</li>
+        <li>Click links below to open videos, PDFs, or quizzes in a pop-up window.</li>
+        <li>Ensure to submit your week 6 acknowledgement form</li>
       </ul>
     </div>
 
-    <p class="mb-4"><strong>Status:</strong> In progress<br><strong>Course Format:</strong> 6 Weeks | Video + Activities + Quiz</p>
-
     <div class="week">
-      <h4><i class="fas fa-calendar-week"></i> Week 1: Understanding the Problem Framing Process</h4>
-      <p><strong>🎥 Video:</strong> Framing Opportunity</p>
-      <p><strong>🧠 Quiz:</strong> Reflection Question</p>
+      <h4>Week 1: Understanding the Problem Framing Process</h4>
+      <p><strong>Objective:</strong> Introduce learners to the concept of framing opportunities and why it's critical to innovation and performance improvement.</p>
+      <p><strong>🎥 Video:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/eRBO31AR6ug')">Framing Opportunity</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSe9GKbqbNrKYKm7ZVTwIWVOno_UH-al77CEUBY6poah6g_vMw/viewform?embedded=true')">Reflection Question</a></p>
     </div>
 
     <div class="week">
-      <h4><i class="fas fa-calendar-week"></i> Week 2: Value Driver Trees: How To Decide Where To Focus Your Energy</h4>
-      <p><strong>🎥 Video:</strong> Value Drivers: How To Decide Where To Focus Your Energy</p>
-      <p><strong>🧠 Quiz:</strong> Reflection Question</p>
-      <p><strong>Other Handovers:</strong> Value Driver Template</p>
+      <h4>Week 2: Value Driver Trees: How To Decide Where To Focus Your Energy</h4>
+      <p><strong>Objective:</strong> Learn how to use value driver trees to break down performance metrics and uncover high-impact areas.</p>
+      <p><strong>🎥 Video:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/smhgmmhslp8')">Value Drivers</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSeLRdX725_zKs3uf-LUFmHQKB3UDJVGjENFZSZQcqPz7X4zHg/viewform?embedded=true')">Reflection Question</a></p>
+      <p><strong>📄 Template:</strong> <a href="https://miro.com/miroverse/building-a-driver-tree/" target="_blank">Value Driver Template</a></p>
     </div>
 
     <div class="week">
-      <h4><i class="fas fa-calendar-week"></i> Week 3: Diagnosing Performance Gaps</h4>
-      <p><strong>📖 Reading:</strong> Fishbone and 5 Whys: Twin Pillars of Root Cause Analysis</p>
-      <p><strong>🧠 Quiz:</strong> Week 3 Quiz</p>
+      <h4>Week 3: Diagnosing Performance Gaps</h4>
+      <p><strong>Objective:</strong> Equip learners with tools to analyze current vs. desired performance and identify root causes of gaps.</p>
+      <p><strong>📖 Reading:</strong> <a href="https://www.linkedin.com/pulse/fishbone-5-whys-twin-pillars-root-cause-analysis-ihssane-grhpe" target="_blank">Fishbone and 5 Whys</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSccQuqdJYevyOeAC4bbQ_NFHeXfzWnHd9_kD7BKszN5SS51_w/viewform?embedded=true')">Week 3 Quiz</a></p>
     </div>
 
     <div class="week">
-      <h4><i class="fas fa-calendar-week"></i> Week 4: Root Cause Analysis</h4>
-      <p><strong>📝 Activity:</strong> Identify a potential problem within your team and map it using fishbone root cause analysis (Google Forms)</p>
-      <p><strong>Other Handovers:</strong> Fishboone Template</p>
+      <h4>Week 4: Root Cause Analysis</h4>
+      <p><strong>Objective:</strong> Analyze current vs. desired performance and identify root causes of gaps.</p>
+      <p><strong>📝 Main Activity:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSenVLnQVnrX9po0UR7FI93h0q9bzhf0Dof6SD9PQkse3bEfug/viewform?embedded=true')">Submit Root Cause Analysis</a></p>
+      <p><strong>📄 Template:</strong> <a href="https://docs.google.com/spreadsheets/d/1VtFNCxt1LJFp-WB3ID_qfKZze_QAxmQc-zEbOB92aGw/edit?usp=sharing" target="_blank">Fishbone Template</a></p>
     </div>
 
     <div class="week">
-      <h4><i class="fas fa-calendar-week"></i> Week 5: Business Process Mapping for Clarity and Insight</h4>
-      <p><strong>🎥 Video:</strong> Business Process Mapping 101</p>
-      <p><strong>🧠 Quiz:</strong> Chapter Quiz</p>
+      <h4>Week 5: Business Process Mapping for Clarity and Insight</h4>
+      <p><strong>Objective:</strong> Understand how to map existing processes to visualize pain points, inefficiencies, and improvement opportunities.</p>
+      <p><strong>🎥 Video:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/zGB9SScvoQU')">Business Process Mapping 101</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSe9hUxKf1rGLA9xxHTbhsLD0zYU_jAAoer0QNuo5edig19nGQ/viewform?embedded=true')">Chapter Quiz</a></p>
     </div>
 
     <div class="week">
-      <h4><i class="fas fa-calendar-week"></i> Week 6: Synthesizing Insights into a Clear Opportunity Statement</h4>
-      <p><strong>🎥 Video:</strong> Exploring the Art of Product Opportunity and Problem Statements</p>
-      <p><strong>📝 Activity:</strong> Essay — Write an opportunity statement for a problem in your area (Google Forms)</p>
+      <h4>Week 6: Synthesizing Insights into a Clear Opportunity Statement</h4>
+      <p><strong>Objective:</strong> Teach learners how to consolidate analysis and communicate a compelling, well-structured opportunity or problem statement.</p>
+      <p><strong>🎥 Video:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/a9IQEWNXSuo?start=248')">The Art of Product Opportunity and Problem Statements</a></p>
+      <p><strong>📝 Essay:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSe_XK1sjSoKLdWVV1tnqiohCoByOmfJuDCJ8sxCC2t23vzkpg/viewform?embedded=true')">Submit Opportunity Statement</a></p>
     </div>
   </main>
+
+  <div class="modal fade" id="resourceModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Course Resource</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <iframe id="resourceFrame" src="" style="width:100%; height:500px; border:none;"></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <footer class="footer">
     <p>&copy; 2025 Alpha Iota | Internal Course Page | Project C.O.R.E.</p>
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    function openResource(url) {
+      document.getElementById('resourceFrame').src = url;
+      const modal = new bootstrap.Modal(document.getElementById('resourceModal'));
+      modal.show();
+    }
+  </script>
 </body>
 </html>
