--- a/index2.html
+++ b/index2.html
@@ -169,6 +169,7 @@
       <h3><i class="fas fa-lightbulb"></i> Problem Solving & Innovation</h3>
       <div id="prob" class="course-list">
         <button class="course-btn" onclick="redirectToCourse('problem-solving-innovation.html', event)">Problem Solving & Innovation</button>
+        <button class="course-btn" onclick="redirectToCourse('problem-solving.html', event)">Problem Solving 101</button>
         <button class="course-btn" onclick="redirectToCourse('decision-for-better-outcomes.html', event)">Decision Making for Better Outcomes</button>
         <button class="course-btn" onclick="redirectToCourse('thriving-through-change.html', event)">Thriving Through Change</button>
         <button class="course-btn" onclick="redirectToCourse('innovation.html', event)">Innovation</button>
