--- a/index2.html
+++ b/index2.html
@@ -149,6 +149,7 @@
       <h3><i class="fas fa-comments"></i> Collaboration & Communication</h3>
       <div id="comm" class="course-list">
         <button class="course-btn" onclick="redirectToCourse('communication-skills.html', event)">Communication Skills</button>
+         <button class="course-btn" onclick="redirectToCourse('communication-trustful-relationship.html', event)">Trustful Communication</button>
         <button class="course-btn" onclick="redirectToCourse('communicating-for-great-teamwork.html', event)">Communicating for Great Teamwork</button>
         <button class="course-btn" onclick="redirectToCourse('collaboration-communication-influencing.html', event)">Influencing</button>
         <button class="course-btn" onclick="redirectToCourse('strategic-stakeholder-communication.html', event)">Strategic Stakeholder Communication</button>
