--- a/index2.html
+++ b/index2.html
@@ -153,7 +153,6 @@
         <button class="course-btn" onclick="redirectToCourse('communicating-for-great-teamwork.html', event)">Communicating for Great Teamwork</button>
         <button class="course-btn" onclick="redirectToCourse('collaboration-communication-influencing.html', event)">Influencing</button>
         <button class="course-btn" onclick="redirectToCourse('strategic-stakeholder-communication.html', event)">Strategic Stakeholder Communication</button>
-        <button class="course-btn" onclick="redirectToCourse('stakeholder-management.html', event)">Stakeholder Management</button>
       </div>
     </div>
 
@@ -182,6 +181,9 @@
       <div id="lead" class="course-list">
         <button class="course-btn" onclick="redirectToCourse('leadership.html', event)">Leadership</button>
         <button class="course-btn" onclick="redirectToCourse('high-performing-team.html', event)">Developing High Performing Team</button>
+        <button class="course-btn" onclick="redirectToCourse('continous-improvement.html', event)">Improving Continously</button>
+        <button class="course-btn" onclick="redirectToCourse('defining-capability.html', event)">Defining Capability</button>
+        <button class="course-btn" onclick="redirectToCourse('feedbacking-performance.html', event)">Providing Performance Feedback</button>
       </div>
     </div>
 
