--- a/index2.html
+++ b/index2.html
@@ -4,190 +4,200 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Alpha Iota Short Courses</title>
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- FontAwesome Icons -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+  <!-- AOS (Animate On Scroll) -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
+  <!-- Animate.css -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
   <style>
     :root {
       --primary: #003e6b;
       --accent: #0077cc;
       --light-bg: #f4f6f9;
       --deep-bg: #eaf1f8;
+      --card-bg: #ffffff;
+      --shadow-color: rgba(0, 62, 107, 0.15);
     }
-
+    html { scroll-behavior: smooth; }
     body {
       font-family: 'Segoe UI', sans-serif;
-      background-color: var(--light-bg);
+      background: linear-gradient(135deg, var(--light-bg), var(--deep-bg));
       color: #333;
+      overflow-x: hidden;
     }
-
     header {
+      position: relative;
       background-color: var(--primary);
       color: white;
-      padding: 3rem 1rem 5rem;
       text-align: center;
-      background-image: url('https://images.unsplash.com/photo-1603570417740-0b4aa3b5f5fd');
-      background-size: cover;
-      background-position: center;
+      padding: 6rem 1rem;
+      filter: brightness(1.05);
     }
-
+    header::after {
+      content: '';
+      display: block;
+      position: absolute;
+      left: 0; right: 0; bottom: 0;
+      height: 100px;
+      background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 100" preserveAspectRatio="none"><path d="M0,0 C600,100 600,0 1200,100 L1200,0 L0,0 Z" fill="white"/></svg>') no-repeat bottom;
+      background-size: cover;
+    }
     header h1 {
       font-size: 3rem;
       font-weight: 700;
-      text-shadow: 1px 1px 3px rgba(0,0,0,0.4);
+      text-shadow: 2px 2px 6px rgba(0,0,0,0.5);
     }
-
     header p {
       font-size: 1.2rem;
       margin-top: 0.5rem;
+      font-style: italic;
     }
-
     .section-title {
-      margin-top: -3rem;
+      margin-top: -4rem;
       text-align: center;
+      padding-top: 4rem;
     }
-
     .section-title h2 {
-      font-size: 2rem;
+      font-size: 2.5rem;
       font-weight: 700;
       color: var(--primary);
     }
-
     .category-card {
-      background-color: white;
-      border-radius: 12px;
-      padding: 2rem;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.08);
-      margin: 1rem auto;
+      background: var(--card-bg);
+      border-radius: 1rem;
+      padding: 2.5rem;
+      margin: 1.5rem auto;
       max-width: 960px;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      box-shadow: 0 20px 40px var(--shadow-color);
+      transition: transform 0.4s ease, box-shadow 0.4s ease;
       cursor: pointer;
     }
-
     .category-card:hover {
-      transform: scale(1.01);
-      box-shadow: 0 12px 32px rgba(0,0,0,0.12);
+      transform: translateY(-8px) scale(1.02);
+      box-shadow: 0 30px 60px var(--shadow-color);
     }
-
     .category-card h3 {
-      font-size: 1.5rem;
+      font-size: 1.75rem;
       color: var(--primary);
-      margin-bottom: 0.5rem;
+      margin-bottom: 0.8rem;
     }
-
     .course-list {
       display: none;
       margin-top: 1rem;
-      animation: fadeIn 0.4s ease-in-out;
+      animation: fadeIn 0.5s ease-in-out;
     }
-
     .course-btn {
-      background-color: var(--primary);
+      background: var(--primary);
       color: white;
       border: none;
-      border-radius: 8px;
-      padding: 0.6rem 1.2rem;
-      margin: 0.3rem;
-      transition: all 0.3s;
+      border-radius: 0.5rem;
+      padding: 0.8rem 1.5rem;
+      margin: 0.4rem;
+      font-weight: 500;
+      box-shadow: 0 6px 12px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
-
     .course-btn:hover {
-      background-color: var(--accent);
-      transform: translateY(-2px);
+      background: var(--accent);
+      transform: translateY(-3px);
+      box-shadow: 0 12px 24px rgba(0,0,0,0.15);
     }
-
     @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
+      from { opacity: 0; transform: translateY(15px); }
       to { opacity: 1; transform: translateY(0); }
     }
-
-    .modal iframe {
-      width: 100%;
-      height: 400px;
-      border: none;
-      border-radius: 10px;
-    }
-
     .info-banner {
-      background-color: var(--deep-bg);
-      padding: 3rem 1rem;
+      background: var(--deep-bg);
+      padding: 4rem 1rem;
       text-align: center;
     }
-
     .features-section {
       background: white;
-      padding: 3rem 1rem;
+      padding: 4rem 1rem;
     }
-
     .feature-icon {
-      font-size: 3rem;
+      font-size: 3.5rem;
       color: var(--primary);
       margin-bottom: 1rem;
+      animation: pulse 2s infinite;
     }
-
+    @keyframes pulse {
+      0%,100% { transform: scale(1); }
+      50% { transform: scale(1.1); }
+    }
     .footer {
       background: var(--primary);
       color: white;
       text-align: center;
-      padding: 2rem 1rem;
+      padding: 2.5rem 1rem;
       margin-top: 4rem;
+      font-size: 0.9rem;
     }
   </style>
 </head>
 <body>
 
-  <header>
-    <h1><i class="fas fa-graduation-cap"></i> Alpha Iota Short Courses</h1>
-    <p>Empowering your growth through Alpha Learning — our internal online learning hub.</p>
+  <header data-aos="fade-down">
+    <h1 class="animate__animated animate__fadeInDown"><i class="fas fa-graduation-cap"></i> Alpha Iota Short Courses</h1>
+    <p class="animate__animated animate__fadeInUp">Empowering your growth through Alpha Learning — our internal online learning hub.</p>
   </header>
 
-  <div class="container section-title">
+  <div class="container section-title" data-aos="zoom-in">
     <h2>Explore Our Learning Categories</h2>
   </div>
 
   <div class="container">
-    <div class="category-card" onclick="toggleCourses('comm')">
+    <!-- Collaboration & Communication -->
+    <div class="category-card" onclick="toggleCourses('comm')" data-aos="fade-up" data-aos-delay="100">
       <h3><i class="fas fa-comments"></i> Collaboration & Communication</h3>
       <div id="comm" class="course-list">
         <button class="course-btn" onclick="redirectToCourse('communication-skills.html', event)">Communication Skills</button>
-         <button class="course-btn" onclick="redirectToCourse('communication-trustful-relationship.html', event)">Trustful Communication</button>
+        <button class="course-btn" onclick="redirectToCourse('communication-trustful-relationship.html', event)">Trustful Communication</button>
         <button class="course-btn" onclick="redirectToCourse('communicating-for-great-teamwork.html', event)">Communicating for Great Teamwork</button>
         <button class="course-btn" onclick="redirectToCourse('collaboration-communication-influencing.html', event)">Influencing</button>
-        <button class="course-btn" onclick="redirectToCourse('strategic-stakeholder-communication.html', event)">Strategic Stakeholder Communication</button>
+        <button class="course-btn" onclick="redirectToCourse('strategic-stakeholder-communication.html', event)">Strategic Communication</button>
       </div>
     </div>
 
-    <div class="category-card" onclick="toggleCourses('prod')">
+    <!-- Execution & Productivity -->
+    <div class="category-card" onclick="toggleCourses('prod')" data-aos="fade-up" data-aos-delay="200">
       <h3><i class="fas fa-chart-line"></i> Execution & Productivity</h3>
       <div id="prod" class="course-list">
         <button class="course-btn" onclick="redirectToCourse('productivity-focus-course.html', event)">Productivity & Focus</button>
-        <button class="course-btn" onclick="redirectToCourse('productivity-efficiency.html', event)">Productivity and Efficiency</button>
+        <button class="course-btn" onclick="redirectToCourse('productivity-efficiency.html', event)">Productivity & Efficiency</button>
       </div>
     </div>
 
-    <div class="category-card" onclick="toggleCourses('prob')">
+    <!-- Problem Solving & Innovation -->
+    <div class="category-card" onclick="toggleCourses('prob')" data-aos="fade-up" data-aos-delay="300">
       <h3><i class="fas fa-lightbulb"></i> Problem Solving & Innovation</h3>
       <div id="prob" class="course-list">
-        <button class="course-btn" onclick="redirectToCourse('problem-solving-innovation.html', event)">Problem Solving & Innovation</button>
+        <button class="course-btn" onclick="redirectToCourse('problem-solving-innovation.html', event)">Solving & Innovation</button>
         <button class="course-btn" onclick="redirectToCourse('problem-solving.html', event)">Problem Solving 101</button>
-        <button class="course-btn" onclick="redirectToCourse('decision-for-better-outcomes.html', event)">Decision Making for Better Outcomes</button>
+        <button class="course-btn" onclick="redirectToCourse('decision-for-better-outcomes.html', event)">Decision Making</button>
         <button class="course-btn" onclick="redirectToCourse('thriving-through-change.html', event)">Thriving Through Change</button>
         <button class="course-btn" onclick="redirectToCourse('innovation.html', event)">Innovation</button>
         <button class="course-btn" onclick="redirectToCourse('frame-opportunity.html', event)">Frame Opportunity</button>
       </div>
     </div>
 
-    <div class="category-card" onclick="toggleCourses('lead')">
+    <!-- Leadership & Change Management -->
+    <div class="category-card" onclick="toggleCourses('lead')" data-aos="fade-up" data-aos-delay="400">
       <h3><i class="fas fa-user-tie"></i> Leadership & Change Management</h3>
       <div id="lead" class="course-list">
         <button class="course-btn" onclick="redirectToCourse('leadership.html', event)">Leadership</button>
-        <button class="course-btn" onclick="redirectToCourse('high-performing-team.html', event)">Developing High Performing Team</button>
-        <button class="course-btn" onclick="redirectToCourse('continous-improvement.html', event)">Improving Continously</button>
+        <button class="course-btn" onclick="redirectToCourse('high-performing-team.html', event)">High-Performing Teams</button>
+        <button class="course-btn" onclick="redirectToCourse('continuous-improvement.html', event)">Continuous Improvement</button>
         <button class="course-btn" onclick="redirectToCourse('defining-capability.html', event)">Defining Capability</button>
-        <button class="course-btn" onclick="redirectToCourse('feedbacking-performance.html', event)">Providing Performance Feedback</button>
+        <button class="course-btn" onclick="redirectToCourse('feedbacking-performance.html', event)">Performance Feedback</button>
       </div>
     </div>
 
-    <div class="category-card" onclick="toggleCourses('vision')">
+    <!-- Vision & Strategy -->
+    <div class="category-card" onclick="toggleCourses('vision')" data-aos="fade-up" data-aos-delay="500">
       <h3><i class="fas fa-binoculars"></i> Vision & Strategy</h3>
       <div id="vision" class="course-list">
         <button class="course-btn" onclick="redirectToCourse('strategic-planning.html', event)">Strategic Planning</button>
@@ -195,32 +205,35 @@
     </div>
   </div>
 
-  <div class="info-banner">
+  <!-- Info Banner -->
+  <div class="info-banner" data-aos="fade-in" data-aos-delay="200">
     <h4>What is Alpha Learning?</h4>
     <p>Alpha Learning is our in-house training facility where you can develop competencies through quick, focused content — aligned with how we work and grow.</p>
   </div>
 
-  <div class="features-section container">
-    <h2>How We Support Your Growth</h2>
+  <!-- Features Section -->
+  <div class="features-section container" data-aos="fade-up">
+    <h2 class="text-center mb-5">How We Support Your Growth</h2>
     <div class="row text-center">
-      <div class="col-md-4 mb-4">
+      <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-delay="100">
         <i class="fas fa-chalkboard-teacher feature-icon"></i>
         <h5>Guided Courses</h5>
-        <p>All content is curated with short, practical activities for better learning retention.</p>
+        <p>Short, practical activities for better retention.</p>
       </div>
-      <div class="col-md-4 mb-4">
+      <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-delay="200">
         <i class="fas fa-laptop-code feature-icon"></i>
         <h5>Learn Anywhere</h5>
-        <p>Whether at work or remote, you can access modules anytime — just enter the access code.</p>
+        <p>Access modules anytime — enter your code and go.</p>
       </div>
-      <div class="col-md-4 mb-4">
+      <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-delay="300">
         <i class="fas fa-user-check feature-icon"></i>
-        <h5>Role-Aligned Topics</h5>
-        <p>Courses support day-to-day roles across departments — from strategy to service.</p>
+        <h5>Role-Aligned</h5>
+        <p>Courses support day-to-day roles across departments.</p>
       </div>
     </div>
   </div>
 
+  <!-- Course Access Modal -->
   <div class="modal fade" id="courseModal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-lg modal-dialog-centered">
       <div class="modal-content">
@@ -229,7 +242,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <input type="password" id="passcodeInput" placeholder="Enter passcode to continue" class="form-control mb-3">
+          <input type="password" id="passcodeInput" placeholder="Enter passcode" class="form-control mb-3">
           <div id="passcodeError" class="text-danger" style="display:none;">Incorrect passcode. Try again.</div>
         </div>
         <div class="modal-footer">
@@ -239,34 +252,35 @@
     </div>
   </div>
 
-  <footer class="footer">
+  <!-- Footer -->
+  <footer class="footer" data-aos="fade-up" data-aos-delay="200">
     <p>&copy; 2025 Alpha Iota | Internal Use Only | Powered by Project C.O.R.E.</p>
   </footer>
 
+  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
   <script>
+    AOS.init({ duration: 800, once: true });
+
     let selectedUrl = '';
-
     function toggleCourses(id) {
-      const courseDiv = document.getElementById(id);
-      courseDiv.style.display = courseDiv.style.display === 'block' ? 'none' : 'block';
+      const el = document.getElementById(id);
+      el.style.display = (el.style.display === 'block') ? 'none' : 'block';
     }
-
     function redirectToCourse(htmlFile, event) {
       event.stopPropagation();
       selectedUrl = htmlFile;
-      document.getElementById("passcodeInput").value = '';
-      document.getElementById("passcodeError").style.display = 'none';
-      const modal = new bootstrap.Modal(document.getElementById('courseModal'));
-      modal.show();
+      document.getElementById('passcodeInput').value = '';
+      document.getElementById('passcodeError').style.display = 'none';
+      new bootstrap.Modal(document.getElementById('courseModal')).show();
     }
-
     function submitPasscode() {
-      const input = document.getElementById("passcodeInput").value.trim();
-      if (input === "alpha2025") {
+      const input = document.getElementById('passcodeInput').value.trim();
+      if (input === 'alpha2025') {
         window.location.href = selectedUrl;
       } else {
-        document.getElementById("passcodeError").style.display = "block";
+        document.getElementById('passcodeError').style.display = 'block';
       }
     }
   </script>
