--- a/index2.html
+++ b/index2.html
@@ -12,6 +12,9 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
   <!-- Animate.css -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
+ <a href="index.html" class="home-btn">
+  <i class="fas fa-home"></i> Home
+</a>
   <style>
     :root {
       --primary: #003e6b;
